# CppPhoneDirectory

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
aggregator/: CMakeLists.txt  aggregator.cpp  aggregator.hpp  rabbit-mq-adapter.hpp
api-gateway/: CMakeLists.txt  gateway.cpp  vcpkg.json
application/: service.hpp
domain/contact/: contact-factory.hpp
microservice/contact/: CMakeLists.txt  vcpkg.json
microservice/contact/application/: service.hpp
microservice/contact/domain/: contact-factory.hpp  contact-repository.hpp  contact-service.hpp  contact.hpp
rabbitmq/: rabbit-mq-adapter.hpp  rabbit-mq-connection-handler.hpp
